2004-08-10  Ian Zimmerman  <itz@californiadigital.com>

	* fish/src/scm-procedures.c (ex_sel_display_first_entry):
	use SEL_RECORD_SIZE constant instead of hardcoding.
	(hex_dump_record_data): new function.
	
	* fish/src/ipmi-wrapper-sel.h: #define SEL_RECORD_SIZE

	* TODO: Add gh -> scm conversion task.

2004-08-16  A Balamurugan  <bala.a@californiadigital.com>

	* fish/extensions/bc-common.scm: code cleanups
	* fish/extensions/bc-section.scm: like wise
	* fish/scripts/bmc-config/bmc-config.in: now uses new bmc-config

2004-08-05  Ian Zimmerman  <itz@californiadigital.com>

	* configure.ac: Bump version for snapshot release.

2004-07-28  A Balamurugan  <bala.a@californiadigital.com>

	* fish/extensions/bc-common.scm: added new procedure (file-exists?)
	* fish/extensions/bc-section.scm: code cleanup and updated procedures
	* fish/extensions/bc2.scm: like wise

2004-07-26  Albert Chu  <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_bmclog, _init_bmc_watchdog):
	Fixed --no-logging option.
	
2004-07-17  A Balamurugan  <bala.a@californiadigital.com>

	* fish/extensions/bc-common.scm: added primitives for checkout support
	* fish/extensions/bc-lan-conf-auth-section.scm: like wise
	* fish/extensions/bc-lan-conf-misc-section.scm: like wise
	* fish/extensions/bc-lan-conf-section.scm: like wise
	* fish/extensions/bc-lan-serial-channel-section.scm: like wise
	* fish/extensions/bc-misc-section.scm: like wise
	* fish/extensions/bc-section.scm: like wise
	* fish/extensions/bc-serial-conf-section.scm: like wise
	* fish/extensions/bc-user-section.scm: like wise
	* fish/src/bmc-conf2.[ch]: added new functions
	get_bmc_user_access(), get_bmc_channel_access(),
	get_bmc_chassis_status(), get_bmc_username(),
	get_bmc_user_lan_channel_access(),
	get_bmc_user_serial_channel_access(),
	get_bmc_lan_channel_volatile_access(),
	get_bmc_lan_channel_non_volatile_access(),
	get_bmc_lan_conf_ip_addr_source(), get_bmc_lan_conf_ip_addr(),