@@ -69,6 +69,8 @@ SCM ex_sel_display_first_entry ();
 SCM ex_sel_display_next_entry ();
 SCM ex_sel_get_first_entry ();
 SCM ex_sel_get_next_entry ();
+SCM ex_sel_get_first_entry_raw ();
+SCM ex_sel_get_next_entry_raw ();
 SCM ex_sel_delete_entry (SCM scm_record_id);
 SCM ex_sel_clear ();
 SCM ex_sel_get_clear_status ();
