@@ -1,3 +1,12 @@
+2004-08-16  Ian Zimmerman  <itz@californiadigital.com>
+
+	* fish/src/scm-procedures.h: add prototypes for
+	ex_sel_get_next_entry_raw and ex_sel_get_first_entry_raw.
+
+	* fish/src/scm-procedures.c (ex_sel_get_next_entry_raw):
+	new function.
+	(ex_sel_get_first_entry_raw): new function.
+
 2004-08-10  Ian Zimmerman  <itz@californiadigital.com>
 
 	* fish/src/scm-procedures.c (ex_sel_display_first_entry):
